# Virtual-Assistant

./: .dockerignore  .env.example  .gitignore  DEPLOY_RAILWAY.md  Dockerfile  Dockerfile.frontend  GUIA_RECRIAR_MYSQL.md  README.md  SOLUCAO_ERRO_AGENT_ID.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/migrations/: README.md  add_agent_id_to_client.sql  run_migration.py
backend/src/: config.py  main.py
backend/src/agent/: graph.py  nodes.py  state.py
backend/src/config/: __init__.py  logger.py  settings.py
backend/src/controllers/: chat.py
backend/src/db/: crud.py  session.py
backend/src/db/model/: agent.py  chat.py  client.py  message.py  platform.py  user.py
backend/src/router/: agent.py  client.py  user.py
backend/src/routers/: agent.py  auth.py  user.py
backend/src/schemas/: auth.py
backend/src/utils/: agent.py  auth.py  webhook.py
chatBot/: .env.example  .gitignore  Dockerfile  README.md  help.txt  requirements.txt
chatBot/src/: config.py  main.py  schemas.py  utils.py
db/: .env.example  Dockerfile
frontend/: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  requirements.txt  setup.py
frontend/core/: asgi.py  settings.py  urls.py  wsgi.py
frontend/dashboard/: admin.py  models.py  services.py  urls.py  views.py
frontend/templates/: base.html
frontend/templates/client/: dashboard.html  login.html
frontend/templates/dashboard/: home.html  login.html  signup.html
frontend/templates/dashboard/agents/: create.html  edit.html  list.html
(+9 files in other folders)
